# Smart-home-AIoT

Documents/Documents/: Bao cao mang cam bien.docx  ESP  NOW.docx
Documents/Picture/: dessign.pptx
Firmware/ESP32_C3-MQTT/: CMakeLists.txt
Firmware/ESP32_C3-MQTT/components/esp_now/: my_espnow.c  my_espnow.h
Firmware/ESP32_C3-MQTT/components/fsm/: fsm.h
Firmware/ESP32_C3-MQTT/components/lib_math/: CMakeLists.txt
Firmware/ESP32_C3-MQTT/components/lib_uart/: lib_uart.c
Firmware/ESP32_C3-MQTT/main/: CMakeLists.txt  test.c
Firmware/ESP32_Now_DHT11/: code_main.txt
Firmware/ESP32_Now_DHT11/Document/: Mac_addr.txt
Firmware/ESP32_Now_Lux/Documents/: espnow_slave_flow.md  mac_addr.txt
Firmware/ESP32_Now_Lux/main/: CMakeLists.txt
Firmware/ESP32_Now_Slave1/: CMakeLists.txt  code_uart.txt
Firmware/ESP32_Now_Slave1/main/: CMakeLists.txt  api.c  api.h  main.c
Firmware/ESP32_Now_master2/: CMakeLists.txt
Firmware/ESP32_Now_master2/Documents/: ESP-NOW_Master_Slave_Workflow.md  Jsonmessage.txt  README_Json_message.md
Firmware/ESP32_Now_master2/main/: API_USAGE.md  CMakeLists.txt
Firmware/speech_commands_recognition/: partitions.csv  sdkconfig  sdkconfig.old
Firmware/speech_commands_recognition/code_backup/: WakeNet.c  code.c
Firmware/speech_commands_recognition/main/: .cproject  CMakeLists.txt
Firmware/speech_commands_recognition/main/Src/: audio_feed.c  main.c  plug_control.c  speech_detect.c
Firmware/speech_commands_recognition/main/include/: app_config.h  audio_feed.h  micro.h  plug_control.h  speech_detect.h
(+91 files in other folders)
